/**
 * Copyright 2021 Lightbend Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/**
 * Specify the version of the Protobuf syntax
 */
syntax = "proto3";

/**
  * Packages prevent name clashes between protocol messages
  */
package com.coreyauger.lovebomb.user;

/**
 * Imports allow you to use definitions from other protobuf files.
 */
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


message User {
    string username = 1 [(.akkaserverless.field).entity_key = true];     

    /* IG fields */
    string biography = 11;
    string external_url = 12;
    uint32 followed_by_count = 13;
    string fbid = 14;
    uint32 follow_count = 15;
    string full_name = 16;
    string id  = 17;
    bool is_business_account = 18;
    bool is_professional_account = 19;
    bool is_joined_recently = 20;
    string category_name = 21;
    string profile_pic_url = 22;
    string profile_pic_url_hd = 23;
    bool should_show_category = 24;
      
    /* extended fields */
    uint32 bomber_score = 25;
}


message GetUserRequest {
    string id = 1 [(.akkaserverless.field).entity_key = true];
}


message GetUsersByBomberScoreRequest {
    uint32 score = 1;
    // TODO: paging
}

message GetUsersByScore {
    string score = 1;
    uint32 skip = 2;
    uint32 limit = 3;
}

message GetUsers {
    uint32 skip = 1;
    uint32 limit = 2;
}

service UserService {
    /**
     * The entity type determines what kind of prefix entities get
     * when persisted
     */
    option (.akkaserverless.service).entity.type = ".persistence.User";

    rpc SaveUser(User) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/user/{id}"
            body: "*"
        };
    }
}

service GetUsersService {
    rpc UpdateUser(User) returns (User) {
        option (.akkaserverless.method).eventing = {
            in: {
                value_entity: "user"
            }
        };
        option (.akkaserverless.method).view.update = {
            table: "user"
        };
    }

    rpc GetUser(GetUserRequest) returns (User) {
        option (.akkaserverless.method).view.query = {
            query: "SELECT * FROM user WHERE username = :username"
        };
        option (google.api.http) = {
            get: "/user/username"
        };
    }
}

service GetUserByScoreService {
    rpc UpdateUser(User) returns (User) {
        option (.akkaserverless.method).eventing = {
            in: {
                value_entity: "user" // this is the entity type
            }
        };
        option (.akkaserverless.method).view.update = {
            table: "scoreuser"
        };
    }

    rpc GetUserByScore(GetUsersByScore) returns (stream User) {
        option (.akkaserverless.method).view.query = {
            query: "SELECT * FROM scoreuser WHERE score < :score"
        };
        option (google.api.http) = {
            get: "/user/scoreuser"
        };
    }
}

service AllUsersService {
    rpc UpdateUser(User) returns (User) {
        option (.akkaserverless.method).eventing = {
            in: {
                value_entity: "user" // this is the entity type
            }
        };
        option (.akkaserverless.method).view.update = {
            table: "allusers"
        };
    }

    rpc GetAllUsers(GetUsers) returns (stream User) {
        option (.akkaserverless.method).view.query = {
            query: "SELECT * FROM allusers"
        };
        option (google.api.http) = {
            get: "/users"
        };
    }
}